correcting mongo impl